@@ -1,6 +1,5 @@
 package com.noqapp.domain.types;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -48,7 +47,7 @@ public enum BusinessTypeEnum {
 
     public static List<BusinessTypeEnum> asList() {
         BusinessTypeEnum[] all = BusinessTypeEnum.values();
-        return Arrays.asList(all);
+        return List.of(all);
     }
 
     @Override
